k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: localhost:5050/ila-final-project:0.0.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: 100Mi
            cpu: 1
          limits:
            memory: 100Mi
            cpu: 1
