k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: web
    protocol: TCP
    port: 5000
    targetPort: 5000
